rancher-pipeline.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paintapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paintapp
  template:
    metadata:
      labels:
        app: paintapp
    spec:
      containers:
        - name: paintapp
          image: jaynericguy/paintapp-django-armv8:latest
          ports:
            - containerPort: 8000
 
---

apiVersion: v1
kind: Service
metadata:
  name: paintapp-service
spec:
  selector:
    app: paintapp
  ports:
    port: 80
 
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: paintapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  rules:
    - host: junder.ddns.net
      http:
        paths:
          - path: /paintapp
            backend:
              serviceName: paintapp-service
              servicePort: 80
  tls:
    - hosts:
      - junder.ddns.net
